[project]
name = "ops-pulse"
version = "0.1.0"
description = "Tiny Python client repo for Agent Harness multi-ticket E2E runs."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
ops-pulse = "ops_pulse.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
